--- a/source/Bibliography/References.bib
+++ b/source/Bibliography/References.bib
@@ -1,375 +1,269 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+@article{ritchie,
+author = {Ritchie, Dennis M.},
+title = {The development of the C language},
+year = {1993},
+issue_date = {March 1993},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {28},
+number = {3},
+issn = {0362-1340},
+url = {https://doi.org/10.1145/155360.155580},
+doi = {10.1145/155360.155580},
+abstract = {The C programming language was devised in the early 1970s as a system implementation language for the nascent Unix operating system. Derived from the typeless language BCPL, it evolved a type structure; created on a tiny machine as a tool to improve a meager programming environment, it has become one of the dominant languages of today. This paper studies its evolution.},
+journal = {SIGPLAN Not.},
+month = mar,
+pages = {201–208},
+numpages = {8}
+}
 
+@misc{ANSI, title={The origin of ANSI C and ISO C}, url={https://blog.ansi.org/2017/09/origin-ansi-c-iso-c/}, journal={The ANSI Blog}, author={Kelechava, Brad}, year={2024}, month={Nov}} 
 
-%% Created for Matthew Heaton at 2009-12-29 13:22:40 -0500 
+@standard{ISO,
+  title = {Programming languages -- C},
+  number = {9899},
+  series = {ISO/IEC},
+  year = {1990},
+  organization = {International Organization for Standardization},
+  address = {Geneva},
+  type = {Standard},
+}
+@misc{wg14,
+  author    = {{ISO/IEC JTC1/SC22/WG14}},
+  title     = {ISO/IEC JTC1/SC22/WG14 — C},
+  year      = {2025},
+  url       = {https://www.open-std.org/jtc1/sc22/wg14/},
+  urldate   = {2025-04-16},
+  note      = {Official working group for the C programming language standardization}
+}
 
+@standard{c_standard,
+  title      = {Information technology --- Programming languages --- C},
+  number     = {ISO/IEC 9899:2024},
+  institution= {International Organization for Standardization},
+  address    = {Geneva, Switzerland},
+  year       = {2024},
+  url        = {https://www.iso.org/standard/82075.html},
+}
 
-%% Saved with string encoding Unicode (UTF-8) 
+@misc{nasal_demons,
+  author    = {John F. Woods},
+  title     = {Re: Questions about the C Standard},
+  howpublished = {Usenet post on comp.std.c},
+  year      = {1992},
+  month     = jul,
+  url       = {https://groups.google.com/g/comp.std.c/c/d-6Mj5Lko_s/m/QGxA5K1l3Q0J},
+  urldate   = {2025-04-16}
+}
 
+@misc{LP64,
+  author       = {{IBM}},
+  title        = {ILP32 and LP64 data models and data type sizes},
+  howpublished = {\url{https://www.ibm.com/docs/en/zos/2.3.0?topic=environments-ilp32-lp64-data-models-data-type-sizes}},
+  note         = {Accessed: 2025-04-16}
+}
 
+@book{secure_coding,
+author = {Seacord, Robert C.},
+title = {Secure Coding in C and C++},
+year = {2013},
+isbn = {0321822137},
+publisher = {Addison-Wesley Professional},
+edition = {2nd},
+}
 
-@article{Rue:EtAl:2009,
-	Author = {H\r{a}vard Rue and Sara Martino and Nicolas Chopin},
-	Date-Added = {2009-12-29 13:20:30 -0500},
-	Date-Modified = {2009-12-29 13:22:39 -0500},
-	Journal = {Journal of the Royal Statistical Society, Series B},
-	Number = {2},
-	Pages = {319-392},
-	Title = {Approximate Bayesian inference for latent Gaussian models by using integrated nested Laplace approximations (with discussion)},
-	Volume = {71},
-	Year = {2009}}
+@misc{a5_cost, title={Arianespace aims high in Asia-Pacific}, url={https://www.flightglobal.com/arianespace-aims-high-in-asia-pacific/120757.article}, journal={Flight Global}, publisher={Flight Global}, author={Waldron, Greg}, year={2019}, month={Oct}}
 
-@article{Gelfand:EtAl:2004b,
-	Author = {Alan E. Gelfand and Mark D. Ecker and John R. Knight and C. F. Sirmans},
-	Date-Added = {2009-12-14 12:40:31 -0500},
-	Date-Modified = {2009-12-14 12:43:24 -0500},
-	Journal = {Journal of Real Estate Finance and Economics},
-	Number = {2},
-	Pages = {149-166},
-	Title = {The Dynamics of Location in Home Price},
-	Volume = {29},
-	Year = {2004}}
+@misc{a5,
+  author      = {Jacques-Louis Lions and Inquiry Board},
+  title       = {Report by the Inquiry Board on the Ariane 5 Flight 501 Failure},
+  year        = {1996},
+  institution = {European Space Agency (ESA)},
+  url         = {https://web.archive.org/web/20000815230639/http://www.esrin.esa.it/htdocs/tidc/Press/Press96/ariane5rep.html},
+  note        = {Accessed: 2025-04-16}
+}
 
-@article{Hoeting:EtAl:2006,
-	Author = {Jennifer A. Hoeting and Richard A. Davis and Andrew A. Merton and Sandra E. Thompson},
-	Date-Added = {2009-12-14 12:05:09 -0500},
-	Date-Modified = {2009-12-14 12:06:38 -0500},
-	Journal = {Ecological Applications},
-	Number = {1},
-	Pages = {87-98},
-	Title = {Model Selection for Geostatistical Models},
-	Volume = {16},
-	Year = {2006}}
+@book{therac,
+  title={A Gift of Fire: Social, Legal, and Ethical Issues for Computing and the Internet},
+  author={Baase, S.},
+  isbn={9780136008484},
+  lccn={2007044857},
+  series={Alternative Etext Formats},
+  url={https://books.google.com/books?id=GcBaS87q74gC},
+  year={2008},
+  publisher={Pearson Prentice Hall}
+}
 
-@article{Gelfand:EtAl:2005,
-	Author = {Alan E. Gelfand and Sudipto Banerjee and Dani Gamerman},
-	Date-Added = {2009-12-14 12:03:58 -0500},
-	Date-Modified = {2009-12-14 12:05:06 -0500},
-	Journal = {Environmetrics},
-	Pages = {465-479},
-	Title = {Spatial process modelling for univariate and multivariate dynamic spatial data},
-	Volume = {16},
-	Year = {2005}}
+@misc{x86, title={X86 architecture - windows drivers}, url={https://learn.microsoft.com/en-us/windows-hardware/drivers/debugger/x86-architecture}, journal={Windows drivers | Microsoft Learn}, author={Domars}} 
 
-@unpublished{Reich:EtAl:2010,
-	Author = {Brian J. Reich and M. Fuentes and Amy H. Herring and Kelly R. Evenson},
-	Date-Added = {2009-12-14 11:54:44 -0500},
-	Date-Modified = {2009-12-14 11:56:06 -0500},
-	Note = {Accepted to Biometrics},
-	Title = {Bayesian Variable Selection for Multivariate Spatially-Varying Coefficient Regression},
-	Year = {2009}}
+@manual{python_types,
+  title        = {Built-in Types — Python 3 Standard Library},
+  author       = {{Python Software Foundation}},
+  year         = {2024},
+  url          = {https://docs.python.org/3/library/stdtypes.html}
+}
 
-@article{Wakefield:Salway:2001,
-	Author = {J. Wakefield and R. Salway},
-	Date-Added = {2009-12-14 11:50:10 -0500},
-	Date-Modified = {2009-12-14 11:51:15 -0500},
-	Journal = {Journal of the Royal Statistical Society, Series A},
-	Pages = {119-137},
-	Title = {A statistical framework for ecological and aggregate studies},
-	Volume = {164},
-	Year = {2001}}
+@manual{python_overflow,
+  title        = {OverflowError — Python 3 Built-in Exceptions},
+  author       = {{Python Software Foundation}},
+  year         = {2024},
+  url          = {https://docs.python.org/3/library/exceptions.html#OverflowError}
+}
 
-@article{Dominici:EtAl:2002,
-	Author = {Francesca Dominici and Michael Daniels and Scott L. Zeger and Jonathan M. Samet},
-	Date-Added = {2009-12-14 11:23:55 -0500},
-	Date-Modified = {2009-12-14 11:26:30 -0500},
-	Journal = {Journal of the American Statistical Association},
-	Month = {March},
-	Number = {457},
-	Pages = {100-111},
-	Title = {Air Pollution and Mortality: Estimating Regional and National Dose-Response Relationships},
-	Volume = {97},
-	Year = {2002}}
+@manual{java_int,
+  author       = {{Oracle Corporation}},
+  title        = {Class Integer},
+  year         = {2017},
+  url          = {https://docs.oracle.com/javase/9/docs/api/java/lang/Integer.html#Integer-int-},
+}
 
-@article{Fuentes:Raftery:2005,
-	Author = {M. Fuentes and A. E. Raftery},
-	Date-Added = {2009-11-25 19:56:24 -0500},
-	Date-Modified = {2009-11-25 19:57:31 -0500},
-	Journal = {Biometrics},
-	Pages = {36-45},
-	Title = {Model evaluation and spatial interpolation by Bayesian combination of observations with outputs from numerical models},
-	Volume = {61},
-	Year = {2005}}
+@manual{java_math_2023,
+  title        = {Class Math},
+  author       = {{Oracle Corporation}},
+  year         = {2022},
+  url          = {https://docs.oracle.com/en/java/javase/19/docs/api/java.base/java/lang/Math.html},
+}
 
-@article{Wikle:Berliner:2005,
-	Author = {C. K. Wikle and L. M. Berliner},
-	Date-Added = {2009-11-25 19:45:12 -0500},
-	Date-Modified = {2009-11-25 19:56:21 -0500},
-	Journal = {Technometrics},
-	Pages = {80-91},
-	Title = {Combining information across spatial scales},
-	Volume = {47},
-	Year = {2005}}
+@misc{bigint,
+  author       = {{Oracle Corporation}},
+  title        = {BigInteger Class},
+  year         = {2025},
+  howpublished = {\url{https://docs.oracle.com/javase/8/docs/api/java/math/BigInteger.html}},
+}
 
-@article{Royle:Berliner:1999,
-	Author = {J. A. Royle and L. M. Berliner},
-	Date-Added = {2009-11-25 18:56:14 -0500},
-	Date-Modified = {2009-11-25 18:57:24 -0500},
-	Journal = {Journal of Agricultural, Biological, and Environmental Statistics},
-	Number = {29-56},
-	Title = {A Hierarchical Approach to Multivariate Spatial Modeling and Prediction},
-	Volume = {4},
-	Year = {1999}}
+@book{rust_book,
+  author       = {Steve Klabnik and Carol Nichols},
+  title        = {The Rust Programming Language},
+  edition      = {2nd},
+  year         = {2023},
+  publisher    = {No Starch Press},
+  address      = {San Francisco, CA},
+  isbn         = {978-1718503106},
+}
 
-@article{Berliner:2000,
-	Author = {L. M. Berliner},
-	Date-Added = {2009-11-25 18:54:59 -0500},
-	Date-Modified = {2009-11-25 18:56:11 -0500},
-	Journal = {Allgemeines Statistiches Archiv, Journal of the German Statistical Society},
-	Number = {141-153},
-	Title = {Hierarchical Bayesian Modeling in the Environmental Sciences},
-	Volume = {84},
-	Year = {2000}}
+@misc{rust_checked,
+  author       = {{The Rust Project Developers}},
+  title        = {num 0.4.3},
+  year         = {2024},
+  howpublished = {\url{https://docs.rs/num/latest/num/index.html}},
+}
 
-@article{Diggle:EtAl:1998,
-	Author = {P. J. Diggle and J. A. Tawn and R. A. Moyeed},
-	Date-Added = {2009-11-24 18:36:37 -0500},
-	Date-Modified = {2009-11-24 18:38:02 -0500},
-	Journal = {Applied Statistics},
-	Pages = {299-350},
-	Title = {Model-Based Geostatistics},
-	Volume = {47},
-	Year = {1998}}
+@manual{ftrapv,
+  author       = {{GNU Project}},
+  title        = {GCC Code Generation Options},
+  year         = {2024},
+  howpublished = {\url{https://gcc.gnu.org/onlinedocs/gcc/Code-Gen-Options.html}},
+}
 
-@inproceedings{Raftery:Lewis:1992,
-	Author = {A. E. Raftery and S. Lewis},
-	Booktitle = {Bayesian Statistics 4},
-	Date-Added = {2009-11-18 14:23:16 -0500},
-	Date-Modified = {2009-11-18 14:24:30 -0500},
-	Editor = {J. M. Bernardo and J. Berger and A. P. Dawid and A. F. M. Smith},
-	Publisher = {Oxford University Press},
-	Title = {How many iterations in the Gibbs Sampler?},
-	Year = {1992}}
+@manual{clang-ftrapv,
+  author       = {{LLVM Project}},
+  title        = {Clang Command Line Argument Reference},
+  year         = {2024},
+  howpublished = {\url{https://clang.llvm.org/docs/ClangCommandLineReference.html}},
+}
 
-@inproceedings{Geweke:1992,
-	Author = {J. Geweke},
-	Booktitle = {Bayesian Statistics 4},
-	Date-Added = {2009-11-18 14:19:45 -0500},
-	Date-Modified = {2009-11-18 14:23:08 -0500},
-	Editor = {J. M. Bernardo and J. Berger and A. P. Dawid and A. F. M. Smith},
-	Publisher = {Oxford University Press},
-	Title = {Evaluating the Accuracy of Sampling-Based Approaches to the Calculation of Posterior Moments},
-	Year = {1992}}
+@online{gcc-ubsan,
+  author       = {Marek Polacek},
+  title        = {GCC Undefined Behavior Sanitizer - ubsan},
+  year         = {2014},
+  url          = {https://developers.redhat.com/blog/2014/10/16/gcc-undefined-behavior-sanitizer-ubsan},
+  organization = {Red Hat Developers}
+}
 
-@article{Agarwal:EtAl:2002,
-	Author = {Deepak K. Agarwal and Alan E. Gelfand and Steven Citron-Pousty},
-	Date-Added = {2009-11-17 14:41:14 -0500},
-	Date-Modified = {2009-11-17 14:42:14 -0500},
-	Journal = {Environmental and Ecological Statistics},
-	Pages = {341-355},
-	Title = {Zero-inflated models with application to spatial count data},
-	Volume = {9},
-	Year = {2002}}
+@manual{clang-ubsan,
+  title        = {UndefinedBehaviorSanitizer},
+  author       = {{The Clang Team}},
+  organization = {LLVM Project},
+  year         = {2025},
+  url          = {https://clang.llvm.org/docs/UndefinedBehaviorSanitizer.html}
+}
 
-@article{Green:1995,
-	Author = {Peter J. Green},
-	Date-Added = {2009-11-16 13:40:56 -0500},
-	Date-Modified = {2009-11-16 13:41:52 -0500},
-	Journal = {Biometrika},
-	Number = {4},
-	Pages = {711-732},
-	Title = {Reversible Jump Markov Chain Monte Carlo Computation and Bayesian Model Determination},
-	Volume = {82},
-	Year = {1995}}
+@manual{gcc-lang-ext,
+  title        = {GCC Built-in Functions to Perform Arithmetic with Overflow Checking},
+  author       = {{GCC Developer Community}},
+  organization = {GNU Project},
+  year         = {2025},
+  url          = {https://gcc.gnu.org/onlinedocs/gcc/Integer-Overflow-Builtins.html}
+}
 
-@book{Cressie:1993,
-	Author = {Noel A. C. Cressie},
-	Date-Added = {2009-11-16 11:56:59 -0500},
-	Date-Modified = {2009-11-16 11:58:05 -0500},
-	Publisher = {Wiley},
-	Title = {Statistics for Spatial Data},
-	Year = {1993}}
+@manual{clang-lang-ext,
+  title        = {Clang Language Extensions},
+  author       = {{Clang Developer Community}},
+  organization = {LLVM Project},
+  year         = {2025},
+  url          = {https://clang.llvm.org/docs/LanguageExtensions.html}
+}
 
-@article{Brooks:EtAl:2003,
-	Author = {H. Brooks and J. Lee and J. Craven},
-	Date-Added = {2009-10-13 14:53:42 -0400},
-	Date-Modified = {2009-10-13 14:55:38 -0400},
-	Journal = {Atmospheric Research},
-	Pages = {73-94},
-	Title = {The spatial distribution of severe thunderstorm and tornado environments from global reanalysis data},
-	Volume = {67},
-	Year = {2003}}
+@misc{ckd_arith,
+  author      = {David Svoboda},
+  title       = {Towards Integer Safety},
+  institution = {WG14 – ISO/IEC JTC1/SC22/WG14},
+  number      = {N2683},
+  year        = {2021},
+  month       = mar,
+  url         = {https://www.open-std.org/jtc1/sc22/wg14/www/docs/n2683.pdf},
+  note        = {Working Draft Proposal},
+}
 
-@article{Gelfand:EtAl:2003,
-	Author = {Alan E. Gelfand and Hyon Jung Kim and C. F. Sirmans and Sudipto Banerjee},
-	Date-Added = {2009-09-24 09:58:42 -0400},
-	Date-Modified = {2009-12-14 12:19:58 -0500},
-	Journal = {Journal of the American Statistical Association},
-	Pages = {387-396},
-	Title = {Spatial Modeling With Spatially Varying Coefficient Processes},
-	Volume = {98},
-	Year = {2003}}
+@misc{tf_loc,
+  author       = {{OpenHub contributors}},
+  title        = {TensorFlow - OpenHub},
+  year         = {2025},
+  howpublished = {\url{https://openhub.net/p/tensorflow}},
+}
 
-@book{Banerjee:EtAl:2004,
-	Author = {S. Banerjee and Bradley P. Carlin and Alan E. Gelfand},
-	Date-Added = {2009-09-23 14:56:04 -0400},
-	Date-Modified = {2009-09-23 14:57:21 -0400},
-	Publisher = {Chapman and Hall/CRC},
-	Title = {Hierarchical Modeling and Analysis for Spatial Data},
-	Year = {2004}}
+@misc{car_loc,
+  author       = {David McCandless},
+  title        = {Million Lines of Code},
+  year         = {2013},
+  howpublished = {\url{https://informationisbeautiful.net/visualizations/million-lines-of-code/}},
+}
 
-@book{Matern:1986,
-	Author = {B. Mat\'{e}rn},
-	Date-Added = {2009-09-22 11:40:45 -0400},
-	Date-Modified = {2009-09-22 11:42:02 -0400},
-	Edition = {2},
-	Publisher = {Berlin: Springer-Verlag},
-	Title = {Spatial Variation},
-	Year = {1986}}
+@online{macros,
+  title        = {Replacing text macros - C preprocessor},
+  author       = {{cppreference.com contributors}},
+  year         = {2025},
+  url          = {https://en.cppreference.com/w/c/preprocessor/replace},
+}
 
-@article{Zhang:2004,
-	Author = {Hao Zhang},
-	Date-Added = {2009-09-15 10:22:52 -0400},
-	Date-Modified = {2009-09-15 10:24:22 -0400},
-	Journal = {Journal of the American Statistical Association},
-	Number = {465},
-	Pages = {250-261},
-	Title = {Inconsistent Estimation and Asymptotically Equal Interpolations in Model-Based Geostatistics},
-	Volume = {99},
-	Year = {2004}}
+@online{compiler_support,
+  title        = {Compiler support for C23 - cppreference.com},
+  author       = {{cppreference.com contributors}},
+  year         = {2022},
+  url          = {https://en.cppreference.com/w/c/compiler_support/23},
+}
 
-@article{Smith:1985,
-	Author = {Richard L. Smith},
-	Date-Added = {2009-09-14 14:16:35 -0400},
-	Date-Modified = {2009-09-14 14:18:20 -0400},
-	Journal = {Biometrika},
-	Pages = {67-90},
-	Title = {Maximum likelihood estimation in a class of non-regular cases},
-	Volume = {72},
-	Year = {1985}}
+@online{clang19,
+  author       = {{LLVM Project}},
+  title        = {Clang 19.1.0 Release Notes},
+  year         = {2024},
+  url          = {https://releases.llvm.org/19.1.0/tools/clang/docs/ReleaseNotes.html},
+}
 
-@unpublished{Cooley:Sain:2009,
-	Author = {Dan Cooley and Stephan R. Sain},
-	Date-Added = {2009-09-14 12:53:10 -0400},
-	Date-Modified = {2009-09-14 13:58:44 -0400},
-	Note = {Accepted to JABES},
-	Title = {Spatial Hierarchical Modeling of Precipitation Extremes from a Regional Climate Model},
-	Year = {2009}}
+@online{gcc14,
+  author       = {{GCC Team}},
+  title        = {GCC 14 Release Series},
+  year         = {2024},
+  url          = {https://gcc.gnu.org/gcc-14/},
+}
 
-@unpublished{Sang:Gelfand:2009,
-	Author = {Huiyan Sang and Alan E. Gelfand},
-	Date-Added = {2009-09-14 12:51:40 -0400},
-	Date-Modified = {2009-09-14 14:00:25 -0400},
-	Note = {Submitted to JABES},
-	Title = {Continuous Spatial Process Models for Spatial Extremes},
-	Year = {2009}}
+@misc{semgrep,
+  author       = {{Semgrep, Inc.}},
+  title        = {Semgrep: Lightweight static analysis for many languages},
+  year         = {2025},
+  howpublished = {\url{https://semgrep.dev/}},
+}
 
-@article{Sang:Gelfand:2008,
-	Author = {Huiyan Sang and Alan E. Gelfand},
-	Date-Added = {2009-09-10 17:36:48 -0400},
-	Date-Modified = {2009-09-14 13:59:25 -0400},
-	Journal = {Environmental and Ecological Statistics},
-	Number = {3},
-	Pages = {407-426},
-	Title = {Hierarchical modeling for extreme values observed over space and time},
-	Volume = {16},
-	Year = {2007}}
+@misc{clang-tidy,
+  author       = {{LLVM Project}},
+  title        = {Extra Clang Tools documentation: Clang-Tidy },
+  year         = {2025},
+  howpublished = {\url{https://clang.llvm.org/extra/clang-tidy/}},
+}
 
-@article{Fawcett:Walshaw:2007,
-	Author = {Lee Fawcett and David Walshaw},
-	Date-Added = {2009-09-09 16:34:55 -0400},
-	Date-Modified = {2009-09-09 16:35:46 -0400},
-	Journal = {Environmetrics},
-	Pages = {173-188},
-	Title = {Improved estimation for temporally clustered extremes},
-	Volume = {18},
-	Year = {2007}}
-
-@article{Haario:EtAl:2001,
-	Author = {Heikki Haario and Eero Saksman and Johana Tamminen},
-	Date-Added = {2009-08-25 07:28:34 -0400},
-	Date-Modified = {2009-08-25 07:29:53 -0400},
-	Journal = {Bernoulli},
-	Pages = {223-242},
-	Title = {An Adaptive Metropolis Algorithm},
-	Volume = {2},
-	Year = {2001}}
-
-@article{Spiegelhalter:EtAl:2002,
-	Author = {David J. Spiegelhalter and Nicola G. Best and Bradley P. Carlin and Angelika van der Linde},
-	Date-Added = {2009-08-24 17:29:36 -0400},
-	Date-Modified = {2009-08-24 17:31:05 -0400},
-	Journal = {Journal of the Royal Statistical Society, Series B},
-	Number = {4},
-	Pages = {583-639},
-	Title = {Bayesian measures of model complexity and fit (with discussion)},
-	Volume = {64},
-	Year = {2002}}
-
-@article{Gelman:Rubin:1992,
-	Author = {Andrew Gelman and D. Rubin},
-	Date-Added = {2009-08-24 17:12:53 -0400},
-	Date-Modified = {2009-08-24 17:14:17 -0400},
-	Journal = {Statistical Science},
-	Pages = {457-511},
-	Title = {Inference from Iterative Simulation using Multiple Sequences},
-	Volume = {7},
-	Year = {1992}}
-
-@article{Smith:1989,
-	Author = {Richard L. Smith},
-	Date-Added = {2009-08-06 09:58:10 -0400},
-	Date-Modified = {2009-08-06 09:59:46 -0400},
-	Journal = {Statistical Science},
-	Pages = {367-393},
-	Title = {Extreme Value Analysis of Environmental Time Series: An Application to Trend Detection in Ground-level Ozone (with discussion)},
-	Volume = {4},
-	Year = {1989}}
-
-@unpublished{Smith:2003,
-	Author = {Richard L. Smith},
-	Date-Added = {2009-08-06 09:53:10 -0400},
-	Date-Modified = {2009-08-06 09:55:43 -0400},
-	Note = {http://www.stat.unc.edu/postscript/rs/semstatrls.ps},
-	Title = {Statistics of Extremes with Applications in Environment, Insurance and Finance},
-	Year = {2003}}
-
-@article{Behrens:EtAl:2004,
-	Author = {Cibele N. Behrens and Hedibert F. Lopes and Dani Gamerman},
-	Date-Added = {2009-08-04 17:29:25 -0400},
-	Date-Modified = {2009-08-04 17:30:32 -0400},
-	Journal = {Statistical Modelling},
-	Pages = {227-244},
-	Title = {Bayesian analysis of extreme events with threshold estimation},
-	Volume = {4},
-	Year = {2004}}
-
-@book{Coles:2001,
-	Author = {Stuart G. Coles},
-	Date-Added = {2009-08-04 16:10:36 -0400},
-	Date-Modified = {2009-08-04 16:11:33 -0400},
-	Publisher = {Springer-Verlag},
-	Title = {An Introduction to statistical modeling of extreme values},
-	Year = {2001}}
-
-@article{Coles:Tawn:1996,
-	Author = {Stuart G. Coles and Jonathan A. Tawn},
-	Date-Added = {2009-08-03 17:10:36 -0400},
-	Date-Modified = {2009-08-03 17:11:32 -0400},
-	Journal = {Applied Statistics},
-	Pages = {463-478},
-	Title = {A Bayesian analysis of extreme rainfall data},
-	Volume = {45},
-	Year = {1996}}
-
-@article{Cooley:EtAl:2007,
-	Author = {Dan Cooley and Doug Nychka and Philippe Naveau},
-	Date-Added = {2009-08-03 17:09:04 -0400},
-	Date-Modified = {2009-08-03 17:10:32 -0400},
-	Journal = {Journal of the American Statistical Association},
-	Pages = {824-840},
-	Title = {Bayesian spatial modeling of extreme precipitation return levels},
-	Volume = {102},
-	Year = {2007}}
-
-@article{Gelfand:EtAl:2004,
-	Author = {Alan E. Gelfand and A. M. Schmidt and S. Banerjee and C. F. Sirmans},
-	Date-Added = {2009-08-03 17:05:38 -0400},
-	Date-Modified = {2009-08-03 17:08:52 -0400},
-	Journal = {Test},
-	Number = {2},
-	Pages = {1-50},
-	Title = {Nonstationary multivariate process modeling through spacially varying coregionalization (with discussion)},
-	Volume = {12},
-	Year = {2004}}
+@misc{clang-interfaces,
+  author       = {{LLVM Project}},
+  title        = {Clang documentation: Choosing the Right Interface for Your Application},
+  year         = {2025},
+  howpublished = {\url{https://clang.llvm.org/docs/Tooling.html}},
+}
