--- a/source/Acknowledgements/acknowledgements.tex
+++ b/source/Acknowledgements/acknowledgements.tex
@@ -2,6 +2,4 @@
 
 \setcounter{page}{2}
 
-Thank anyone you like here.  It's good practice to thank every granting agency that's given you money
-since you've been working on your research, any other school you visited during your research,
-and any professional society that's funded your travel.
+Thank you to Maverick Woo who initially proposed the idea for this thesis and has guided me throughout this journey. I would also like to thank Patrick Tague for helping me through major milestones throughout this project and providing useful feedback when requested. I would also like to acknowledge the invaluable support my family and friends have provided me, without which none of this would be possible.
