--- a/source/Bibliography/References.bib
+++ b/source/Bibliography/References.bib
@@ -46,14 +46,15 @@ numpages = {8}
   url        = {https://www.iso.org/standard/82075.html},
 }
 
-@misc{nasal_demons,
-  author    = {John F. Woods},
-  title     = {Re: Questions about the C Standard},
-  howpublished = {Usenet post on comp.std.c},
-  year      = {1992},
-  month     = jul,
-  url       = {https://groups.google.com/g/comp.std.c/c/d-6Mj5Lko_s/m/QGxA5K1l3Q0J},
-  urldate   = {2025-04-16}
+@online{nasal_demons,
+  author       = {Henry Spencer},
+  title        = {Re: Why is this legal?},
+  year         = {1992},
+  month        = feb,
+  date         = {1992-02-22},
+  url          = {https://groups.google.com/g/comp.std.c/c/ycpVKxTZkgw/m/S2hHdTbv4d8J},
+  note         = {Message posted to comp.std.c},
+  urldate      = {2025-04-25}
 }
 
 @misc{LP64,
@@ -117,7 +118,7 @@ edition = {2nd},
   url          = {https://docs.oracle.com/javase/9/docs/api/java/lang/Integer.html#Integer-int-},
 }
 
-@manual{java_math_2023,
+@manual{java_exact,
   title        = {Class Math},
   author       = {{Oracle Corporation}},
   year         = {2022},
@@ -266,4 +267,31 @@ edition = {2nd},
   title        = {Clang documentation: Choosing the Right Interface for Your Application},
   year         = {2025},
   howpublished = {\url{https://clang.llvm.org/docs/Tooling.html}},
+}
+
+@standard{faa,
+  author       = {{Federal Aviation Administration}},
+  title        = {Software Approval Guidelines},
+  institution  = {U.S. Department of Transportation, Federal Aviation Administration},
+  number       = {Order 8110.49A},
+  year         = {2018},
+  month        = mar,
+  day          = {29},
+  note         = {Office of Primary Responsibility: AIR-600, Policy and Innovation Division},
+  url          = {https://www.faa.gov/regulations_policies/orders_notices/index.cfm/go/document.information/documentID/1032976},
+  urldate      = {2025-04-25}
+}
+
+@inproceedings{do,
+  author       = {Ben Brosgol and Cyrille Comar},
+  title        = {DO-178C: A New Standard for Software Safety Certification},
+  booktitle    = {Proceedings of the 22nd Systems and Software Technology Conference (SSTC)},
+  year         = {2010},
+  month        = apr,
+  day          = {26},
+  address      = {Salt Lake City, Utah},
+  organization = {AdaCore},
+  note         = {Sponsored in part by the USAF. Approved for public release; distribution unlimited},
+  url          = {https://apps.dtic.mil/sti/pdfs/ADA558107.pdf},
+  urldate      = {2025-04-25}
 }
