--- a/source/thesis.tex
+++ b/source/thesis.tex
@@ -153,8 +153,8 @@
 %                Appendix 2, Appendix 3...
 %-----------------------------------------------------------------------------%
 
-%\appendix
-%\include{{./Appendix/appendix1}}
+\appendix
+\include{{./Appendix/appendix1}}
 % Start with '\chapter{Title}'
 %You can always add more appendices here if you want
 % You're done :)
